--- a/examples/typescript-angular/.gitignore
+++ b/examples/typescript-angular/.gitignore
@@ -14,3 +14,6 @@ node_modules/todomvc-app-css/*
 node_modules/todomvc-common/*
 !node_modules/todomvc-common/base.css
 !node_modules/todomvc-common/base.js
+
+js/**/*.js
+js/**/*.js.map
